[gd_scene load_steps=14 format=3 uid="uid://cbjiuvcsl7pah"]

[ext_resource type="PackedScene" uid="uid://bb83td6650tnk" path="res://Scenes/nissan_gtr.tscn" id="1_mn8jo"]
[ext_resource type="Texture2D" uid="uid://u8ui6wh8j630" path="res://icon.svg" id="2_6lskc"]
[ext_resource type="PackedScene" uid="uid://bkvy4488fa76d" path="res://trip.tscn" id="3_bga8a"]
[ext_resource type="Script" path="res://Scenes/Destination.gd" id="4_g1ec6"]
[ext_resource type="PackedScene" uid="uid://cipkt8wdlsoqj" path="res://Scenes/passanger.tscn" id="5_afsl6"]
[ext_resource type="Script" path="res://Scenes/celebrating.gd" id="6_3ihvo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lc3uy"]
albedo_texture = ExtResource("2_6lskc")
uv1_scale = Vector3(-2.77, -2.77, -2.77)
uv1_triplanar = true
uv1_triplanar_sharpness = 0.901251

[sub_resource type="PlaneMesh" id="PlaneMesh_g88tw"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_oa7sr"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="SphereShape3D" id="SphereShape3D_xeo7p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ybkbg"]
albedo_color = Color(0.639216, 0, 0, 1)

[sub_resource type="TorusMesh" id="TorusMesh_uxe5l"]
material = SubResource("StandardMaterial3D_ybkbg")
inner_radius = 1.884
outer_radius = 2.007

[sub_resource type="SphereShape3D" id="SphereShape3D_h5xax"]

[node name="RezaTest" type="Node"]

[node name="Nissan GTR" parent="." instance=ExtResource("1_mn8jo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.19633, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(52.4605, 0, 0, 0, 1, 0, 0, 0, 59.5879, 0, 0.243983, 0)
material_override = SubResource("StandardMaterial3D_lc3uy")
mesh = SubResource("PlaneMesh_g88tw")
skeleton = NodePath("../Nissan GTR")

[node name="StaticBody3D2" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D2"]
shape = SubResource("ConcavePolygonShape3D_oa7sr")

[node name="light" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.187901, 0.982188, 0, -0.982188, 0.187901, -0.0402851, 12.1149, -12.4439)

[node name="TripManager" parent="." node_paths=PackedStringArray("POIListParent", "PassangerPrefab", "DestinationPrefab", "CelebratingPrefab") instance=ExtResource("3_bga8a")]
POIListParent = NodePath("../POIListParent")
PassangerPrefab = NodePath("PassangerPickupArea")
DestinationPrefab = NodePath("Destination")
CelebratingPrefab = NodePath("celebrating")

[node name="PassangerPickupArea" parent="TripManager" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.66102, 0.449506, 10.402)

[node name="Destination" type="Area3D" parent="TripManager"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.32251, 0.381743, 0.679792)
script = ExtResource("4_g1ec6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TripManager/Destination"]
transform = Transform3D(8.845, 0, 0, 0, 8.845, 0, 0, 0, 8.845, 0, 0, 0)
shape = SubResource("SphereShape3D_xeo7p")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TripManager/Destination"]
transform = Transform3D(2.191, 0, 0, 0, 1.03, 0, 0, 0, 2.191, 0, 5.03296, 0)
mesh = SubResource("TorusMesh_uxe5l")

[node name="celebrating" parent="TripManager" instance=ExtResource("5_afsl6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.6324, 0.433486, 2.12626)
script = ExtResource("6_3ihvo")

[node name="Armature_001" parent="TripManager/celebrating" index="0"]
transform = Transform3D(0.01, 0, 0, 0, -4.37114e-10, -0.01, 0, 0.01, -4.37114e-10, 0, 0, 0)

[node name="Skeleton3D" parent="TripManager/celebrating/Armature_001" index="0"]
bones/0/position = Vector3(-46.5806, 48.2812, -38.4828)
bones/0/rotation = Quaternion(-0.557081, 0.275261, -0.337504, 0.707094)
bones/1/position = Vector3(5.06639e-07, 9.92774, -0.982879)
bones/1/rotation = Quaternion(0.178098, 0.045026, -0.0270974, 0.982608)
bones/2/position = Vector3(-2.98023e-08, 11.639, -5.02913e-07)
bones/2/rotation = Quaternion(0.0619161, 0.0133005, -0.0165536, 0.997855)
bones/3/position = Vector3(4.47035e-08, 13.3017, 1.84774e-06)
bones/3/rotation = Quaternion(0.0620504, 0.0125388, -0.0168902, 0.997851)
bones/4/position = Vector3(5.02914e-08, 14.9644, 3.61076e-07)
bones/4/rotation = Quaternion(0.0271348, -0.00773203, 0.0196488, 0.999409)
bones/5/position = Vector3(-4.17233e-07, 7.46873, 2.57753)
bones/5/rotation = Quaternion(-0.0222583, -0.00643071, 0.0200379, 0.999531)
bones/6/position = Vector3(4.76837e-07, 20.9734, 7.23818)
bones/7/position = Vector3(6.41092, 13.4166, -0.0949271)
bones/7/rotation = Quaternion(-0.609613, -0.363725, 0.613431, -0.346091)
bones/8/position = Vector3(5.66647e-08, 13.8182, -1.60257e-05)
bones/8/rotation = Quaternion(0.316265, -0.110206, 0.176125, 0.925641)
bones/9/position = Vector3(1.80777e-06, 26.9993, 1.37728e-06)
bones/9/rotation = Quaternion(-0.0389668, -0.000178471, 0.130936, 0.990625)
bones/10/position = Vector3(2.29884e-06, 21.9229, -1.4689e-06)
bones/10/rotation = Quaternion(-0.0926121, -0.123999, 0.000796357, 0.987951)
bones/11/position = Vector3(-2.83224, 3.43163, 1.23365)
bones/11/rotation = Quaternion(0.336832, -0.578849, 0.218696, 0.709683)
bones/12/position = Vector3(-0.42242, 3.6696, -2.20872e-05)
bones/12/rotation = Quaternion(-0.0190075, 0.163482, -0.00621136, 0.986344)
bones/13/position = Vector3(-0.0214212, 3.52582, 2.30504e-05)
bones/13/rotation = Quaternion(-0.127417, 0.0794671, 0.00182624, 0.988659)
bones/14/position = Vector3(0.443834, 3.02856, -8.34465e-06)
bones/15/position = Vector3(-3.61484, 10.9735, 0.195015)
bones/15/rotation = Quaternion(-0.00389056, 0.0016405, 0.0972036, 0.995256)
bones/16/position = Vector3(0.0144106, 3.16139, 2.40911e-05)
bones/16/rotation = Quaternion(0.0762938, 4.21291e-06, -3.67265e-05, 0.997085)
bones/17/position = Vector3(-0.0148026, 2.98977, -1.89373e-05)
bones/17/rotation = Quaternion(-0.16888, 0.000648458, 0.015787, 0.98551)
bones/18/position = Vector3(0.000391483, 2.57792, -4.41074e-05)
bones/19/position = Vector3(-1.06117, 11.0445, -0.278734)
bones/19/rotation = Quaternion(-0.0317346, 0.0034017, 0.0198025, 0.999294)
bones/20/position = Vector3(0.0102789, 3.40163, -1.25812e-06)
bones/20/rotation = Quaternion(0.0991396, 0.000277703, -0.00227753, 0.995071)
bones/21/position = Vector3(-0.0163749, 3.27581, 7.10226e-06)
bones/21/rotation = Quaternion(-0.160295, 0.000975617, 0.0109324, 0.987008)
bones/22/position = Vector3(0.00610101, 2.84151, -2.03997e-05)
bones/23/position = Vector3(1.25512, 11.0719, -0.325473)
bones/23/rotation = Quaternion(0.064433, 0.00244246, -0.0357062, 0.99728)
bones/24/position = Vector3(-0.00276041, 2.78693, 5.79524e-06)
bones/24/rotation = Quaternion(0.00387746, -4.06546e-05, -0.00242898, 0.99999)
bones/25/position = Vector3(0.000905514, 2.79432, -2.45192e-06)
bones/25/rotation = Quaternion(-0.103152, 0.000159608, 0.0129034, 0.994582)
bones/26/position = Vector3(0.00186133, 2.35643, 2.57194e-05)
bones/27/position = Vector3(3.42091, 9.97892, 0.105549)
bones/27/rotation = Quaternion(0.144458, 0.00529785, -0.143844, 0.978986)
bones/28/position = Vector3(0.0188527, 2.73533, -1.38487e-05)
bones/28/rotation = Quaternion(0.0937025, 3.03404e-06, -2.58452e-05, 0.9956)
bones/29/position = Vector3(-0.00611949, 2.25055, -2.19874e-06)
bones/29/rotation = Quaternion(-0.0714216, -0.00117284, 0.0133807, 0.997356)
bones/30/position = Vector3(-0.0127201, 1.93173, -3.016e-05)
bones/31/position = Vector3(-6.41092, 13.428, -0.210418)
bones/31/rotation = Quaternion(0.630994, -0.371777, 0.529153, 0.428516)
bones/32/position = Vector3(-2.61732e-07, 13.8182, -2.93035e-05)
bones/32/rotation = Quaternion(0.309664, -0.0869911, -0.346814, 0.881057)
bones/33/position = Vector3(-6.9557e-07, 26.9689, 1.07294e-07)
bones/33/rotation = Quaternion(-0.0152879, -0.0117825, -0.345546, 0.938203)
bones/34/position = Vector3(-5.89843e-07, 21.9222, -4.27086e-06)
bones/34/rotation = Quaternion(-0.150657, -0.0215731, -0.127994, 0.980028)
bones/35/position = Vector3(2.95451, 3.55196, 1.36519)
bones/35/rotation = Quaternion(0.330653, 0.694424, -0.239784, 0.592408)
bones/36/position = Vector3(0.627425, 3.80269, 4.27712e-06)
bones/36/rotation = Quaternion(-0.0822254, -0.241302, 0.0451353, 0.965906)
bones/37/position = Vector3(0.0718007, 3.39657, 6.40186e-06)
bones/37/rotation = Quaternion(-0.141953, -0.129903, 0.00433033, 0.981303)
bones/38/position = Vector3(-0.699241, 2.56161, 1.32322e-05)
bones/39/position = Vector3(3.69657, 11.0422, 0.165159)
bones/39/rotation = Quaternion(0.0653134, -0.00345962, -0.00935752, 0.997815)
bones/40/position = Vector3(-0.0112035, 3.19862, -3.26364e-06)
bones/40/rotation = Quaternion(0.122927, -0.00060784, 0.00557708, 0.9924)
bones/41/position = Vector3(0.012157, 2.98137, 4.081e-05)
bones/41/rotation = Quaternion(0.0386879, 0.00035688, 0.00813218, 0.999218)
bones/42/position = Vector3(-0.000960559, 2.46919, -2.94819e-05)
bones/43/position = Vector3(1.03786, 10.9596, -0.357009)
bones/43/rotation = Quaternion(0.0444316, -0.00153574, 0.01694, 0.998868)
bones/44/position = Vector3(-0.00762284, 3.5208, 7.64694e-06)
bones/44/rotation = Quaternion(0.0860002, -0.000230966, 0.00235318, 0.996292)
bones/45/position = Vector3(0.0118766, 3.30567, -5.67608e-05)
bones/45/rotation = Quaternion(-0.0214986, 0.000249882, 0.00358502, 0.999762)
bones/46/position = Vector3(-0.00424737, 2.9441, 2.68219e-07)
bones/47/position = Vector3(-1.15949, 10.8768, -0.17706)
bones/47/rotation = Quaternion(0.0884587, 0.00146889, 0.052938, 0.994671)
bones/48/position = Vector3(-0.00106394, 2.89942, 1.42865e-05)
bones/48/rotation = Quaternion(0.0767861, -0.000199067, 0.00225094, 0.997045)
bones/49/position = Vector3(0.0100321, 2.85052, -1.21663e-06)
bones/49/rotation = Quaternion(-0.0702754, 0.00052243, 0.00374377, 0.997521)
bones/50/position = Vector3(-0.00898123, 2.4219, 1.45733e-05)
bones/51/position = Vector3(-3.57492, 10.2634, -0.0282661)
bones/51/rotation = Quaternion(0.117968, 0.000542411, 0.0277338, 0.99263)
bones/52/position = Vector3(-0.00354719, 2.65865, 1.15983e-05)
bones/52/rotation = Quaternion(0.088299, -0.000298866, 0.00317365, 0.996089)
bones/53/position = Vector3(0.00824356, 2.16163, 2.33166e-05)
bones/53/rotation = Quaternion(-0.0833881, 1.96133e-05, 0.000179766, 0.996517)
bones/54/position = Vector3(-0.00469971, 1.75512, 3.57628e-07)
bones/55/position = Vector3(8.69879, -5.51937, -0.0576716)
bones/55/rotation = Quaternion(0.0457629, 0.692545, 0.639449, -0.330745)
bones/56/position = Vector3(2.84849e-08, 41.6621, -4.44787e-07)
bones/56/rotation = Quaternion(-0.27132, -0.0235959, 0.0511585, 0.960839)
bones/57/position = Vector3(8.43332e-07, 39.9183, 4.43972e-06)
bones/57/rotation = Quaternion(0.463934, -0.266327, 0.111664, 0.837476)
bones/58/position = Vector3(3.17048e-07, 17.7724, -5.58669e-07)
bones/58/rotation = Quaternion(0.421666, -0.0738119, 0.0168123, 0.903585)
bones/59/position = Vector3(-4.17233e-07, 6.88901, 3.57628e-07)
bones/60/position = Vector3(-8.69879, -5.51937, -0.119319)
bones/60/rotation = Quaternion(-0.0724281, 0.298764, 0.822978, 0.477703)
bones/61/position = Vector3(9.54868e-07, 41.6601, 2.00778e-07)
bones/61/rotation = Quaternion(-0.865546, 0.0391123, -0.0780383, 0.493164)
bones/62/position = Vector3(-4.73908e-07, 39.8777, -2.77453e-08)
bones/62/rotation = Quaternion(0.469271, 0.247141, -0.104866, 0.841255)
bones/63/position = Vector3(2.39347e-06, 17.2103, 3.02906e-06)
bones/63/rotation = Quaternion(0.380398, 0.0499501, -0.0196552, 0.923264)
bones/64/position = Vector3(-1.85519e-06, 7.01135, 5.06636e-07)

[node name="Area3D" type="Area3D" parent="TripManager/celebrating"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="TripManager/celebrating/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.21212, 0)
shape = SubResource("SphereShape3D_h5xax")

[node name="POIListParent" type="Node" parent="."]

[node name="Node" type="Node3D" parent="POIListParent"]

[node name="Node2" type="Node3D" parent="POIListParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.8231, 0, 43.1569)

[node name="Node3" type="Node3D" parent="POIListParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 36.3257, 0, -41.2988)

[connection signal="PassangerPickup" from="TripManager/PassangerPickupArea/passanger" to="TripManager/PassangerPickupArea" method="_on_passanger_passanger_pickup"]
[connection signal="body_shape_entered" from="TripManager/Destination" to="TripManager/Destination" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="TripManager/Destination" to="TripManager/Destination" method="_on_body_shape_exited"]
[connection signal="reachedDestination" from="TripManager/Destination" to="TripManager" method="_on_destination_reached_destination"]
[connection signal="reachedDestination" from="TripManager/Destination" to="TripManager/PassangerPickupArea" method="_on_destination_reached_destination"]
[connection signal="body_entered" from="TripManager/celebrating/Area3D" to="TripManager/celebrating" method="_on_area_3d_body_entered"]

[editable path="Nissan GTR"]
[editable path="TripManager"]
[editable path="TripManager/PassangerPickupArea/passanger"]
[editable path="TripManager/celebrating"]
